--- a/megabonkDpsMeter.csproj
+++ b/megabonkDpsMeter.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
 	    <TargetFramework>net6.0</TargetFramework>
 	    <AssemblyName>megabonkDpsMeter</AssemblyName>
-	    <Description>DPS Meter toggle for Megabonk</Description>
-	    <Version>0.1.0</Version>
+	    <Description>DPS Meter for Megabonk</Description>
+	    <Version>1.0.0</Version>
 	    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	    <LangVersion>latest</LangVersion>
     </PropertyGroup>
@@ -48,3 +48,4 @@
       </Reference>
     </ItemGroup>
 </Project>
+
